--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="manifest" href="./manifest.json">
+  <link rel="manifest" href="./manifest.json"
 
   <title>Budget Tracker</title>
 </head>
@@ -43,11 +43,12 @@
   </div>
 
 
+
   <script src="js/idb.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="js/index.js"></script>
   <script type="text/javascript">
-    (function () {
+    (function() {
       if ('serviceWorker' in navigator) {
         navigator.serviceWorker
           .register('./service-worker.js')
